# storage/api-docs/api-docs.json
@@ -5,34 +5,88 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/booking/": {
+        "api/v1/booking/": {
             "get": {
                 "tags": [
                     "booking"
                 ],
                 "summary": "Get all bookings",
-                "description": "Get all bookings",
+                "description": "Return all bookings",
                 "operationId": "get booking",
-                "requestBody": {
-                    "description": "",
-                    "required": false
-                },
                 "responses": {
-                    "404": {
-                        "description": "Wrong credentials response",
+                    "201": {
+                        "description": "Successful operation",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
                                         "message": {
                                             "type": "string",
-                                            "example": "Not found"
+                                            "example": "Success"
                                         }
                                     },
                                     "type": "object"
                                 }
                             }
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "api/v1/booking/{id}": {
+            "get": {
+                "tags": [
+                    "booking"
+                ],
+                "summary": "Returns specified booking with details",
+                "description": "Return the specified booking, by ID, with details",
+                "operationId": "get booking by ID",
+                "parameters": [
+                    {
+                        "parameter": "get_booking_id",
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the booking",
+                        "schema": {
+                            "type": "string",
+                            "default": "60b927367825c419083d3588"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Success"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
                     }
                 }
             }
